<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_welcome"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome"
        android:layout_margin="15dp"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_alc"
        android:text="@string/about"
        android:textSize="30sp"
        android:fontFamily="@font/montserrat_bold"
        android:padding="10dp"
        android:background="@color/btn_background"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/profile"
        android:textSize="30sp"
        android:padding="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:background="@color/btn_background"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>